# arrowsqlbcpy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml  build.yml  python-publish.yml  wheels.yml
benchmarks/: bench_loadperf.py
src/arrowsqlbcpy/: __init__.py
src/lib/: ArrowSqlBulkCopyNet.cs  ArrowSqlBulkCopyNet.csproj  PointerMemoryManager.cs
tests/: test_import.py  test_load.py
