[project]
name = "arrowsqlbcpy"
license = {text = "MIT"}
description = "Fast bcp from pandas to SQL Server using .Net SqlBulkCopy"
readme = "README.md"
keywords = ["bcp", "sql", "pandas"]
authors = [
    { name = "Russel Webber", email = "24542073+RusselWebber@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
]
dynamic = ["version"]

[tool.uv]
no-sources = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
license-files = []

[tool.setuptools.dynamic.version]
file = "version.txt"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "wheel>=0.45.1",
]
